Fix footer z-index problem

--- a/style.scss
+++ b/style.scss
@@ -50,6 +50,7 @@ header {
 
 footer {
   bottom: 0;
+  z-index: 5;
 
   a {
     display: flex;
